# Crux

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: .dependabot.yml  dependabot.yml
.github/workflows/: ci.yml
crux/: Cargo.toml
crux-lib/: Cargo.toml
crux-lib/src/: lib.rs
crux-lib/src/notation/: mod.rs  usi.rs
crux-lib/src/shogi/: attacks.rs  bitboard.rs  core.rs  mod.rs  movegen.rs
crux-lib/src/shogi/position/: hand.rs  key.rs  mod.rs  mv.rs  zobrist.rs
crux-lib/src/utils/: rng.rs
crux-lib/tests/: attacks.rs  bitboard.rs  core.rs  tests.rs
crux-lib/tests/notation/: mod.rs  usi.rs
crux-lib/tests/shogi/: attacks.rs  bitboard.rs  core.rs  mod.rs  movegen.rs
crux-lib/tests/shogi/position/: hand.rs  key.rs  mod.rs  mv.rs  zobrist.rs
crux-trainer/: Cargo.toml
